Ui fixing on MyQ Matrix star alignment

--- a/public/after_login/new_ui/css/style.css
+++ b/public/after_login/new_ui/css/style.css
@@ -5653,7 +5653,7 @@ span.profile-digit {
 
 .profile-picture-txt .p-text p {
     color: #2c3348;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 /* start by Sachin-05-03-22*/
